# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import ("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")
import("//build/ohos/taihe_idl/taihe.gni")

copy_taihe_idl("copy_account") {
    sources = [
        "os_account/idl/ohos.account.distributedAccount.taihe"，
        "os_account/idl/ohos.account.osAccount.taihe"，
        ]
}

subsystem_name = "account"
part_name = "os_account"
taihe_generated_file_path = "$taihe_file_path/out/$subsystem_name/$part_name"

ohos_taihe("osaccount_taihe") {
    taihe_generated_file_path = "$taihe_generated_file_path"
    deps = [":copy_account"]
    outputs = [
        "$taihe_generated_file_path/src/ohos.account.osAccount.ani.cpp",
        "$taihe_generated_file_path/src/ohos.account.osAccount.abi.c"
    ]
}

taihe_shared_library("os_account_taihe_native") {
    taihe_generated_file_path = "$taihe_generated_file_path"
    part_name = "$part_name"
    subsystem_name = "$subsystem_name"
    sources = get_target_outputs(":osaccount_taihe")
    cflags_cc = [
        "-Wno-logical-op-parentheses",
        "-Wno-reorder",
    ]
    include_dirs = [
        "include"
    ]
    sources += [
        "os_account/src/ohos.account.osAccount.impl.cpp",
    ]
    deps = [
        ":osaccount_taihe",
    ]
}

generate_static_abc("os_account_abc") {
    base_url = "$taihe_generated_file_path"
    files = ["$taihe_generated_file_path/@ohos.account.osAccount.ets"]
    is_boot_abc = "True"
    device_dst_file = "/system/framework/os_account_abc.abc"
    dependencies = [ ":osaccount_taihe" ]
}

ohos_prebuilt_etc("os_account_etc") {
    source = "$target_out_dir/os_account_abc.abc"
    module_install_dir = "framework"
    part_name = "$part_name"
    subsystem_name = "$subsystem_name"
    deps = [":os_account_abc"]
}

group("account_taihe") {
    deps = [
        ":os_account_etc",
        ":os_account_taihe_native",
    ]
}
